templates/rabbitmq-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    tier: queue
spec:
  type: NodePort
  selector:
    app: rabbitmq
    tier: queue
  ports:
    - name: rabbitmq-port
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management-port
      protocol: TCP
      port: 15672
      targetPort: 15672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    tier: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
      tier: queue
  template:
    metadata:
      labels:
        app: rabbitmq
        tier: queue
    spec:
      containers:
      - image: bitnami/rabbitmq:latest  
        name: rabbitmq
        ports:
        - containerPort: 5672
        - containerPort: 15672
